<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text_status"
        android:textColorHint="@color/cardview_dark_background"
        android:textColor="@color/black"
        android:gravity="start|top" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text_location"
        android:textColorHint="@color/cardview_dark_background"
        android:textColor="@color/black"
        android:gravity="start|top" />

    <EditText
        android:id="@+id/timeExitNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text_time_exit_network"
        android:textColorHint="@color/cardview_dark_background"
        android:textColor="@color/black"
        android:gravity="start|top" />
</LinearLayout>